# fuel_prices_qld

./: .gitignore  .gitmodules  .user.yml  LICENSE  Makefile  README.md  big_querry_utils.py  dbt.md  gbq_init.py  ingestion.py  notebook.py  pyproject.toml  to_gcs.py
dbt_fuel/: .user.yml  dbt_project.yml  profiles.yml
dbt_fuel/models/staging/: schema.yml  stg_dim_stations.sql  stg_monthly_prices.sql  stg_weekly_prices.sql
dbt_fuel/snapshots/: stations.sql
