[tool.poetry]
name = "fuel-app"
version = "0.1.0"
description = ""
authors = ["Grzegorz Sajko <grzegorz.sajko@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.gcp.dependencies]
google-cloud-bigquery = "^3.6.0"
gcsfs = "^2023.3.0"

[tool.poetry.group.ingestion.dependencies]
pandas = "^1.5.3"
pyarrow = "^11.0.0"
fsspec = "^2023.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ruff = "^0.0.228"
pytest = "^7.2.1"
ipykernel = "^6.20.2"
mypy = "^0.991"
chardet = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | data/fuel_data
  )/
)
'''
[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]